// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly 1`] = `
<div
  className="polygon-options"
>
  <div
    className="option-block"
    key="polygon-sides"
  >
    <div
      className="label"
    >
      Sides
    </div>
    <UnitInput
      abbr={false}
      className={
        {
          "option-input": true,
        }
      }
      decimal={0}
      defaultValue={5}
      disabled={false}
      displayMultiValue={false}
      forceUsePropsUnit={false}
      getValue={[Function]}
      isDoOnInput={false}
      max={9007199254740991}
      min={3}
      onBlur={[Function]}
      onFocus={[Function]}
      onKeyUp={[Function]}
      step={1}
      type="text"
      unit=""
    />
  </div>
  <InFillBlock
    elem={null}
  />
</div>
`;

exports[`should render correctly 2`] = `
<div
  className="polygon-options"
>
  <div
    className="option-block"
    key="polygon-sides"
  >
    <div
      className="label"
    >
      Sides
    </div>
    <UnitInput
      abbr={false}
      className={
        {
          "option-input": true,
        }
      }
      decimal={0}
      defaultValue={5}
      disabled={false}
      displayMultiValue={false}
      forceUsePropsUnit={false}
      getValue={[Function]}
      isDoOnInput={false}
      max={9007199254740991}
      min={3}
      onBlur={[Function]}
      onFocus={[Function]}
      onKeyUp={[Function]}
      step={1}
      type="text"
      unit=""
    />
  </div>
  <InFillBlock
    elem={
      <div
        id="flux"
      />
    }
  />
</div>
`;

exports[`should render correctly 3`] = `
<div
  className="polygon-options"
>
  <div
    className="option-block"
    key="polygon-sides"
  >
    <div
      className="label"
    >
      Sides
    </div>
    <UnitInput
      abbr={false}
      className={
        {
          "option-input": true,
        }
      }
      decimal={0}
      defaultValue={8}
      disabled={false}
      displayMultiValue={false}
      forceUsePropsUnit={false}
      getValue={[Function]}
      isDoOnInput={false}
      max={9007199254740991}
      min={3}
      onBlur={[Function]}
      onFocus={[Function]}
      onKeyUp={[Function]}
      step={1}
      type="text"
      unit=""
    />
  </div>
  <InFillBlock
    elem={
      <div
        id="flux"
      />
    }
  />
</div>
`;

exports[`should render correctly 4`] = `
<div
  className="polygon-options"
>
  <div
    className="option-block"
    key="polygon-sides"
  >
    <div
      className="label"
    >
      Sides
    </div>
    <UnitInput
      abbr={false}
      className={
        {
          "option-input": true,
        }
      }
      decimal={0}
      defaultValue={5}
      disabled={false}
      displayMultiValue={false}
      forceUsePropsUnit={false}
      getValue={[Function]}
      isDoOnInput={false}
      max={9007199254740991}
      min={3}
      onBlur={[Function]}
      onFocus={[Function]}
      onKeyUp={[Function]}
      step={1}
      type="text"
      unit=""
    />
  </div>
  <InFillBlock
    elem={
      <div
        id="flux"
      />
    }
  />
</div>
`;
